0026148: BRep_Tool::IsClosed failed to judge a closed edge on Poly_Triangulation.

The method signature has been changed by adding an argument TopLoc_Location.